--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -1,10 +1,5 @@
 @media (min-width: 1200px) {
 
-  // The menu
-  .menu-toggle {
-    display: none;
-  }
-
   // The site's main containing element
   .page {
     width: auto;
@@ -16,15 +11,18 @@
     max-width: 900px;
   }
 
+  // Style the footer on desktops
   .site-footer {
     background: rgba(171, 171, 171, 1);
     color: rgba(54, 48, 48, 1);
     height: 30px;
   }
 
+  // Style the the element that contains all the navigation
   .navbar {
     max-width:600px;
     display: inline-block;
     left: 47px;
   }
+
 }
