--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -1,7 +1,11 @@
 @media (min-width: 768px) {
 
+	// Center all the elements in the site's main content element
+	.site {
+		margin: 0 auto;
+	}
 
-
+  // Hide the hamburger menus on 768px views and higher
 	.menu-toggle {
 	  display: none;
 	}
@@ -24,17 +28,22 @@
 		display: inline-block;
 	}
 
+
+	// Push phone number all the way left in ".contact-information-inner"
 	.phone-number {
 		float: left;
 	}
 
+	// Push hours all the way right in ".contact-information-inner"
 	.hours {
 		float: right;
 	}
 
+  // Style the containing ".navbar" element on 768px views and higher
 	.navbar {
 		max-width: 600px;
 	  display: inline-block;
 	  left: 47px;
 	}
+	
 }
