--- a/css-build/imports/min-width-992-max-width-1199.less
+++ b/css-build/imports/min-width-992-max-width-1199.less
@@ -1,5 +1,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
 
+  // Style the site header
+  // Must be tweaked for views that are a bit smaller than the big view
   .site-header {
     max-width: 818px;
   }
