--- a/css-build/style.css
+++ b/css-build/style.css
@@ -115,13 +115,16 @@ body,
 .home-link {
   display: inline-block;
 }
+/*
+* =====================================================================
+* Start main navigation styling
+* Most of this was brought over from the "twentythirteen" stylesheet
+* =====================================================================
+*/
 .menu-item {
   list-style-type: none;
   margin-right: 7px;
   text-align: left;
-}
-.nav-menu {
-  padding-left: 11px;
 }
 .main-navigation-header {
   position: absolute !important;
@@ -129,14 +132,17 @@ body,
   /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
 }
-.nav-menu li {
-  display: inline-block;
-  position: relative;
-}
 .main-navigation {
   clear: both;
   margin: 0 auto;
   max-width: 1080px;
+  position: relative;
+}
+.nav-menu {
+  padding-left: 11px;
+}
+.nav-menu li {
+  display: inline-block;
   position: relative;
 }
 ul.nav-menu,
@@ -154,9 +160,11 @@ div.nav-menu > ul {
   background-color: #220e10;
   color: #fff;
 }
+.sub-menu li {
+  width: 200px;
+}
 .nav-menu .sub-menu,
 .nav-menu .children {
-  background-color: #220e10;
   border-top: 0;
   padding: 0;
   position: absolute;
@@ -166,6 +174,7 @@ div.nav-menu > ul {
   width: 1px;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
+  background-color: #220e10;
 }
 .nav-menu .sub-menu ul,
 .nav-menu .children ul {
@@ -175,9 +184,9 @@ div.nav-menu > ul {
 }
 ul.nav-menu ul a,
 .nav-menu ul ul a {
-  color: #fff;
   margin: 0;
   width: 200px;
+  color: #fff;
 }
 ul.nav-menu ul a:hover,
 .nav-menu ul ul a:hover,
@@ -194,11 +203,15 @@ ul.nav-menu .focus > ul,
   height: inherit;
   width: inherit;
 }
-/* Style sub-menu links*/
-.sub-menu li {
-  width: 200px;
-}
+/*
+* =====================================================================
+* End main navigation styling
+* =====================================================================
+*/
 @media (min-width: 768px) {
+  .site {
+    margin: 0 auto;
+  }
   .menu-toggle {
     display: none;
   }
@@ -234,9 +247,6 @@ ul.nav-menu .focus > ul,
   }
 }
 @media (min-width: 1200px) {
-  .menu-toggle {
-    display: none;
-  }
   .page {
     width: auto;
     margin: 0 auto;
@@ -264,6 +274,17 @@ ul.nav-menu .focus > ul,
     clip: rect(1px 1px 1px 1px);
     /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px);
+  }
+  .hamburger-menu {
+    display: block;
+    width: 25px;
+    height: 4px;
+    margin: 5px 0;
+    background: #000;
+  }
+  ul.nav-menu,
+  div.nav-menu > ul {
+    display: none;
   }
   .main-navigation {
     z-index: 2;
@@ -314,28 +335,5 @@ ul.nav-menu .focus > ul,
   .toggled-on .nav-menu > ul a:focus {
     background-color: #220e10;
     color: #fff;
-  }
-  ul.nav-menu,
-  div.nav-menu > ul {
-    display: none;
-  }
-  .hamburger-menu {
-    display: block;
-    width: 25px;
-    height: 4px;
-    margin: 5px 0;
-    background: #000;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu-toggle {
-    display: none;
-  }
-  .site {
-    margin: 0 auto;
-  }
-  .navbar {
-    max-width: 600px;
-    left: 0;
   }
 }
