--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1427,19 +1427,20 @@ a,a:focus,a:hover{color:#696767}
 .site-footer{height:20px;background-color:#ababab}
 .home-link{display:inline-block}
 .menu-item{list-style-type:none;margin-right:7px;text-align:left}
-.nav-menu{padding-left:11px}
 .main-navigation-header{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .main-navigation{clear:both;margin:0 auto;max-width:1080px;position:relative}
+.nav-menu{padding-left:11px}
 div.nav-menu>ul,ul.nav-menu{margin:0}
 .nav-menu li{display:inline-block;position:relative}
 .nav-menu li a:focus,.nav-menu li a:hover,.nav-menu li:focus>a,.nav-menu li:hover>a{background-color:#220e10;color:#fff}
-.nav-menu .children,.nav-menu .sub-menu{background-color:#220e10;border-top:0;padding:0;position:absolute;left:-2px;z-index:99999;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px)}
+.sub-menu li{width:200px}
+.nav-menu .children,.nav-menu .sub-menu{border-top:0;padding:0;position:absolute;left:-2px;z-index:99999;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);background-color:#220e10}
 .nav-menu .children ul,.nav-menu .sub-menu ul{border-left:0;left:100%;top:0}
-.nav-menu ul ul a,ul.nav-menu ul a{color:#fff;margin:0;width:200px}
+.nav-menu ul ul a,ul.nav-menu ul a{margin:0;width:200px;color:#fff}
 .nav-menu ul ul a:focus,.nav-menu ul ul a:hover,ul.nav-menu ul a:focus,ul.nav-menu ul a:hover{background-color:#db572f}
 .nav-menu .focus>ul,.nav-menu ul li:hover>ul,ul.nav-menu .focus>ul,ul.nav-menu li:hover>ul{clip:inherit;overflow:inherit;height:inherit;width:inherit}
-.sub-menu li{width:200px}
-@media (min-width:768px){.menu-toggle{display:none}
+@media (min-width:768px){.site{margin:0 auto}
+.menu-toggle{display:none}
 .contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
 .contact-information-inner,.site-footer-inner{max-width:900px;margin:0 auto}
 .contact-information-element{display:inline-block}
@@ -1447,13 +1448,14 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .hours{float:right}
 .navbar{max-width:600px;display:inline-block;left:47px}}
 @media (min-width:992px) and (max-width:1199px){.site-header{max-width:818px}}
-@media (min-width:1200px){.menu-toggle{display:none}
-.page{width:auto;margin:0 auto}
+@media (min-width:1200px){.page{width:auto;margin:0 auto}
 .site-header{max-width:900px}
 .site-footer{background:#ababab;color:#363030;height:30px}
 .navbar{max-width:600px;display:inline-block;left:47px}}
 @media (max-width:767px){.site-header{text-align:center}
 .contact-information{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+.hamburger-menu{display:block;width:25px;height:4px;margin:5px 0;background:#000}
+div.nav-menu>ul,ul.nav-menu{display:none}
 .main-navigation{z-index:2;position:absolute}
 .navbar{top:-51px;left:28px}
 .toggled-on .menu-toggle:after{vertical-align:2px}
@@ -1463,9 +1465,4 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .toggled-on .nav-menu li>ul a{color:#141412;width:auto}
 .toggled-on .nav-menu .children a,.toggled-on .nav-menu li:hover>a{background-color:transparent;color:#141412}
 .toggled-on .nav-menu>li a:hover,.toggled-on .nav-menu>ul a:hover{background-color:#db572f;color:#fff}
-.toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}
-div.nav-menu>ul,ul.nav-menu{display:none}
-.hamburger-menu{display:block;width:25px;height:4px;margin:5px 0;background:#000}}
-@media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}
-.site{margin:0 auto}
-.navbar{max-width:600px;left:0}}
+.toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}}
