start bootstrap config, start styling slideshwo

--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -18,7 +18,8 @@
 		padding:2px 0;
 	}
 
-	.contact-information-inner, .site-footer-inner {
+  // Contact header, main content element & footer share the same width
+	.contact-information-inner, .site-content, .site-footer-inner {
 		max-width: 900px;
 		margin: 0 auto;
 	}
@@ -45,5 +46,5 @@
 	  display: inline-block;
 	  left: 47px;
 	}
-	
+
 }
