--- a/css-build/style.css
+++ b/css-build/style.css
@@ -35,63 +35,63 @@ a:hover {
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 320px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 320px), only screen and (min-device-pixel-ratio: 2) and (min-width: 320px), only screen and (min-resolution: 192dpi) and (min-width: 320px), only screen and (min-resolution: 2dppx) and (min-width: 320px) {
   /* Small screen, retina, stuff to override above media query */
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    background: url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
     background-size: 210px 48px;
     width: 210px;
     height: 48px;
   }
   .menu-item::before {
-    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    content: url(/wp//wp-content/themes/parlor/images/nav-bullet@2x.png);
     margin-right: 5px;
   }
 }
 @media only screen and (min-width: 768px) {
   /* Medium screen, non-retina */
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    background: url(/wp//wp-content/themes/parlor/images/logo.png) no-repeat;
     text-indent: -999px;
     background-size: 210px 48px;
   }
   .menu-item::before {
-    content: url(/wp-content/themes/parlor/images/nav-bullet.png);
+    content: url(/wp//wp-content/themes/parlor/images/nav-bullet.png);
     margin-right: 5px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 768px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 768px), only screen and (min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min-resolution: 192dpi) and (min-width: 768px), only screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    background: url(/wp//wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
     background-size: 210px 48px;
   }
   .menu-item::before {
-    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    content: url(/wp//wp-content/themes/parlor/images/nav-bullet@2x.png);
     margin-right: 5px;
   }
 }
 @media only screen and (min-width: 1300px) {
   /* Large screen, non-retina */
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat 10px -64px;
+    background: url(/wp//wp-content/themes/parlor/images/logo.png) no-repeat 10px -64px;
     text-indent: -999px;
     background-size: 210px 48px;
     width: 210px;
     height: 48px;
   }
   .menu-item::before {
-    content: url(/wp-content/themes/parlor/images/nav-bullet.png);
+    content: url(/wp//wp-content/themes/parlor/images/nav-bullet.png);
     margin-right: 5px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 1300px), only screen and (min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min-resolution: 192dpi) and (min-width: 1300px), only screen and (min-resolution: 2dppx) and (min-width: 1300px) {
   /* Large screen, retina, stuff to override above media query */
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    background: url(/wp//wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
     background-size: 210px 48px;
   }
   .menu-item::before {
-    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    content: url(/wp//wp-content/themes/parlor/images/nav-bullet@2x.png);
     margin-right: 5px;
   }
 }
@@ -222,6 +222,7 @@ ul.nav-menu .focus > ul,
     padding: 2px 0;
   }
   .contact-information-inner,
+  .site-content,
   .site-footer-inner {
     max-width: 900px;
     margin: 0 auto;
