--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1411,16 +1411,16 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 .hide-element{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a,a:focus,a:hover{color:#696767}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-resolution:192dpi) and (min-width:320px),only screen and (min-resolution:2dppx) and (min-width:320px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
-.menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
-@media only screen and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) no-repeat;text-indent:-999px;background-size:210px 48px}
-.menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-resolution:192dpi) and (min-width:768px),only screen and (min-resolution:2dppx) and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
-.menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
-@media only screen and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) 10px -64px no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
-.menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-resolution:192dpi) and (min-width:1300px),only screen and (min-resolution:2dppx) and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
-.menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-resolution:192dpi) and (min-width:320px),only screen and (min-resolution:2dppx) and (min-width:320px){.site-title{background:url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
+.menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
+@media only screen and (min-width:768px){.site-title{background:url(../../../../../wp/wp-content/themes/parlor/images/logo.png) no-repeat;text-indent:-999px;background-size:210px 48px}
+.menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-resolution:192dpi) and (min-width:768px),only screen and (min-resolution:2dppx) and (min-width:768px){.site-title{background:url(../../../../../wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
+.menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
+@media only screen and (min-width:1300px){.site-title{background:url(../../../../../wp/wp-content/themes/parlor/images/logo.png) 10px -64px no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
+.menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-resolution:192dpi) and (min-width:1300px),only screen and (min-resolution:2dppx) and (min-width:1300px){.site-title{background:url(../../../../../wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
+.menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
 .site,.site-main,body,html{height:100%;min-height:100%}
 .site-title{text-align:left}
 .site-header{margin:0 auto}
@@ -1442,7 +1442,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
-.contact-information-inner,.site-footer-inner{max-width:900px;margin:0 auto}
+.contact-information-inner,.site-content,.site-footer-inner{max-width:900px;margin:0 auto}
 .contact-information-element{display:inline-block}
 .phone-number{float:left}
 .hours{float:right}
