create PLUGIN_wp_fluid_responsive_images to style WP slide show

--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1466,3 +1466,4 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .toggled-on .nav-menu .children a,.toggled-on .nav-menu li:hover>a{background-color:transparent;color:#141412}
 .toggled-on .nav-menu>li a:hover,.toggled-on .nav-menu>ul a:hover{background-color:#db572f;color:#fff}
 .toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}}
+.frs-slideshow-container#home-pagepjc{margin:0!important}
