--- a/css-build/style.less
+++ b/css-build/style.less
@@ -17,3 +17,4 @@
 @import "imports/screen-and-min-width-768";
 @import "imports/all-transform-3d-webkit-transform-3d";
 @import "imports/min-width-768-max-width-991";
+@import "imports/PLUGIN_wp_fluid_responsive_images";
