--- a/css-build/imports/mixins.less
+++ b/css-build/imports/mixins.less
@@ -1,12 +1,12 @@
 // Logo mixin...this the only image on the site
 .logo {
   text-indent: -999px;
-  background-size: 210px 48px;
+  background-size: 270px 56px;
 }
 
 /*
- * HELPER CLASSES
- */
+* HELPER CLASSES
+*/
 
 // Use the old school Yahoo trick for hiding page elements
 // Read more at: http://yhoo.it/1vz3NVW
@@ -15,4 +15,10 @@
   clip: rect(1px 1px 1px 1px);
   /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
+}
+
+.col-md-6-mixin {
+  width: 300px;
+  display: inline-block;
+  vertical-align: top;
 }
