make the home page title invisible globally

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -4,6 +4,11 @@ html, body, .site, .site-main {
 	min-height:100%;
 }
 
+
+.home .entry-title {
+  text-indent: -999px;	
+}
+
 // Move the main h1/logo to the left
 .site-title {
 	text-align: left;
