--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1423,6 +1423,7 @@ a,a:focus,a:hover{color:#696767}
 @media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-resolution:192dpi) and (min-width:1300px),only screen and (min-resolution:2dppx) and (min-width:1300px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:270px 56px}
 .menu-item::before{content:url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
 .site,.site-main,body,html{height:100%;min-height:100%}
+.home .entry-title{text-indent:-999px}
 .site-title{text-align:left}
 .site-header{margin:0 auto}
 .site-footer{height:20px;background-color:#ababab}
