--- a/css-build/style.css
+++ b/css-build/style.css
@@ -107,6 +107,9 @@ body,
   height: 100%;
   min-height: 100%;
 }
+.home .entry-title {
+  text-indent: -999px;
+}
 .site-title {
   text-align: left;
 }
