update styles, add Google Quicksand font

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -4,9 +4,15 @@ html, body, .site, .site-main {
 	min-height:100%;
 }
 
+// Globally style all the site text
+body {
+	font-family: 'Quicksand', sans-serif;
+	font-size: 16px;
+}
 
+// Globally hide the home poge's content title
 .home .entry-title {
-  text-indent: -999px;	
+  text-indent: -999px;
 }
 
 // Move the main h1/logo to the left
@@ -24,7 +30,6 @@ html, body, .site, .site-main {
 	height: 20px;
 	background-color: rgba(171, 171, 171, 1);
 }
-
 
 // Move the main h1/logo to the left
 .home-link {
@@ -149,3 +154,8 @@ ul.nav-menu .focus > ul,
 * End main navigation styling
 * =====================================================================
 */
+
+// space out the two rows on the home page
+.homepage-top-row {
+	margin-bottom: 20px;
+}
