--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -93,4 +93,15 @@
     color: #fff;
   }
 
+  // Center the page content on handheld views
+  .entry-content {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  // Padding the bottom of the intro copy on the home page
+  .home-page-info {
+    padding: 0 0 30px;
+  }
+
 }
