--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -9,18 +9,42 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
   /* Small screen, retina, stuff to override above media query */
   .site-title {
     background: url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
-    text-indent: -999px;
-    background-size: 210px 48px;
-    width: 260px;
-    height: 56px;
+    .logo();
   }
 
-  .menu-item::before {
-    content:url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);
-    margin-right:5px;
-  }
 
 }
+
+
+
+
+
+
+
+@media only screen and (min-width: 320px) {
+
+  /* Medium screen, non-retina */
+  .site-title {
+    background: url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;
+    .logo();
+  }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 768px) {
 
@@ -64,8 +88,6 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   .site-title {
     background: url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;
     .logo();
-    width: 270px;
-    height: 56px;
   }
 
   .menu-item::before {
