--- a/css-build/style.css
+++ b/css-build/style.css
@@ -1,6 +1,8 @@
 .logo {
   text-indent: -999px;
   background-size: 270px 56px;
+  width: 270px;
+  height: 56px;
 }
 /*
 * HELPER CLASSES
@@ -42,13 +44,19 @@ a:hover {
   .site-title {
     background: url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
-    background-size: 210px 48px;
-    width: 260px;
+    background-size: 270px 56px;
+    width: 270px;
     height: 56px;
   }
-  .menu-item::before {
-    content: url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);
-    margin-right: 5px;
+}
+@media only screen and (min-width: 320px) {
+  /* Medium screen, non-retina */
+  .site-title {
+    background: url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -57,6 +65,8 @@ a:hover {
     background: url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;
     text-indent: -999px;
     background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
   }
   .menu-item::before {
     content: url(/wp//wp-content/themes/parlor/images/nav-bullet.png);
@@ -68,6 +78,8 @@ a:hover {
     background: url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
     background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
   }
   .menu-item::before {
     content: url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);
@@ -94,6 +106,8 @@ a:hover {
     background: url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
     background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
   }
   .menu-item::before {
     content: url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);
@@ -106,6 +120,10 @@ body,
 .site-main {
   height: 100%;
   min-height: 100%;
+}
+body {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
 }
 .home .entry-title {
   text-indent: -999px;
@@ -216,6 +234,9 @@ ul.nav-menu .focus > ul,
 * End main navigation styling
 * =====================================================================
 */
+.homepage-top-row {
+  margin-bottom: 20px;
+}
 @media (min-width: 768px) {
   .site {
     margin: 0 auto;
@@ -248,6 +269,9 @@ ul.nav-menu .focus > ul,
     max-width: 600px;
     display: inline-block;
     left: 47px;
+  }
+  .home-page-info {
+    padding-top: 30px;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -349,6 +373,13 @@ ul.nav-menu .focus > ul,
   .toggled-on .nav-menu > ul a:focus {
     background-color: #220e10;
     color: #fff;
+  }
+  .entry-content {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  .home-page-info {
+    padding: 0 0 30px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
