--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -7,7 +7,6 @@ html, body, .site, .site-main {
 // Globally style all the site text
 body {
 	font-family: 'Quicksand', sans-serif;
-	font-size: 16px;
 }
 
 // Globally hide the home poge's content title
@@ -150,12 +149,17 @@ ul.nav-menu .focus > ul,
 }
 
 /*
-* =====================================================================
-* End main navigation styling
-* =====================================================================
-*/
+ * =====================================================================
+ * End main navigation styling
+ * =====================================================================
+ */
 
-// space out the two rows on the home page
+// Space out the two rows on the home page
 .homepage-top-row {
 	margin-bottom: 20px;
+}
+
+// Set some elements in Bootstrap's "row" class to be 300px
+.row-inner-element {
+	width: 300px;
 }
