--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -14,3 +14,8 @@ a {
 a:focus,a:hover{
   color: @link-color;
 }
+
+// Increase the font size in the Bootstrap "row" class
+.row {
+  font-size: 18px;
+}
