--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -156,10 +156,16 @@ ul.nav-menu .focus > ul,
 
 // Space out the two rows on the home page
 .homepage-top-row {
-	margin-bottom: 20px;
+	margin-bottom: 70px;
 }
 
-// Set some elements in Bootstrap's "row" class to be 300px
+// Set some elements in Bootstrap's "row" class to be 300px and centered
 .row-inner-element {
+	margin: 0 auto;
 	width: 300px;
+}
+
+// Make the font size of the home page's "artist" copy bigger
+.art-exhibits-header {
+	font-size: 40px;
 }
