--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -1,5 +1,10 @@
 @media (max-width: 767px) {
 
+  // Force the height of the home page on handhelds
+  .home .site-main {
+    min-height: 1200px;
+  }
+
   // On handhelds, center the logo
   .site-header {
     text-align: center;
